@@ -119,12 +119,12 @@ class View(ViewSupport, BrowserPage):
     def __init__(self, context, request):
         super(View, self).__init__(context, request)
         self.__name__ = getattr(self, '__view_name__', None)
-
-        if getattr(self, 'module_info', None) is not None:
+        static_name = getattr(self, '__static_name__', None)
+        if static_name is not None:
             self.static = component.queryAdapter(
                 self.request,
                 interface.Interface,
-                name=self.module_info.package_dotted_name)
+                name=static_name)
         else:
             self.static = None
 
